Wed May 15 00:42:54 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* signal.c: need to include unistd.h for write(2).
	  unistd.h is now included via ruby/defines.h, but should explicitly
	  include here.  (suggested by kosaki)

Tue May 14 23:43:05 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/.document: Add ifaddr.c.

Tue May 14 23:24:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/extconf.rb: check for if_nametoindex() for
	  i686-w64-mingw32, and check for declarations of if_indextoname() and
	  if_nametoindex().

	* ext/socket/ifaddr.c (ifaddr_ifindex): not-implement unless
	  if_nametoindex() is available.

	* ext/socket/rubysocket.h: declare if_indextoname() and
	  if_nametoindex() if available but not declared.

Tue May 14 19:58:17 2013  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* ext/dl/lib/dl/func.rb (DL::Function#call): check tainted when
	  $SAFE > 0.
	* ext/fiddle/function.c (function_call): check tainted when $SAFE > 0.
	* test/fiddle/test_func.rb (module Fiddle): add test for above.


Tue May 14 14:51:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/win32.h (INTPTR_MAX, INTPTR_MIN, UINTPTR_MAX): split
	  from intptr_t and uintptr_t, since VC9 defines the latter only in
	  crtdefs.h.

Tue May 14 12:21:28 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (NET_LUID): mingw may have NET_LUID and not defined
	  _IFDEF_.

Tue May 14 03:33:17 2013  Koichi Sasada  <ko1@atdot.net>

	* string.c (rb_str_new_frozen): remove debug print.

Tue May 14 03:22:51 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: enable to generate write barrier protected
	  arrays (T_ARRAY).

Tue May 14 03:21:42 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: enable to generate write barrier protected
	  strings (T_STRING).

Tue May 14 03:19:59 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: enable to generate write barrier protected
	  objects (T_OBJECT).
