@@ -1,3 +1,12 @@
+Wed May 15 02:06:35 2013  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* test/psych/helper.rb: envutil is not available outside Ruby, so
+	  port the functions from envutil to the test helper.
+
+	* test/psych/test_deprecated.rb: ditto
+
+	* test/psych/test_encoding.rb: ditto
+
 Wed May 15 00:42:54 2013  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* signal.c: need to include unistd.h for write(2).
